Fixed z-index

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 	height: 100%;
   box-shadow: 0 0 20px var(--shadow);
 	display: inline-block;
-  z-index: 1;
+  z-index: 2;
 }
 
 #map {
@@ -70,11 +70,12 @@ body {
 }
 
 #mapContainer {
+  position: relative;
 	height: 100%;
 	width: 100%;
 	padding-left: 15%;
 	overflow: hidden;
-  z-index: 2;
+  z-index: 1;
 }
 
 nav {
@@ -84,17 +85,6 @@ nav {
   right: 0;
   z-index: 1;
   overflow: auto;
-}
-#placeSelector {
-  position: fixed;
-  top: 10px;
-	left: 260px;
-  z-index: 5;
-  width: 30%;
-  background: white;
-}
-#placeSelector input[type=text] {
-    margin: 0;
 }
 
 html, body {
@@ -177,13 +167,12 @@ input[type=submit]:hover, button:hover {
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 10; /* Sit on top */
     left: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     border: 5px solid blue;
-
 }
 
 /* Modal Content/Box */
